Fix default example and add tags exampl

--- a/cloud-machines/example-cluster.yml
+++ b/cloud-machines/example-cluster.yml
@@ -1,12 +1,16 @@
-clusters:
-  - default:
-    imageid: ami-f5a5a5c5
-    region: us-west-2
-    defaultavailablezone: us-west-2a
-    keyname: aws-keyname
-    securitygroups: [sg-00000000]
-    subnetid: subnet-abcd0000
+default:
+  imageid: ami-f5a5a5c5
+  region: us-west-2
+  defaultavailablezone: us-west-2a
+  keyname: aws-keyname
+  securitygroups: [sg-00000000]
+  subnetid: subnet-abcd0000
 
+tags:
+  - team: core
+  - env: staging
+
+clusters:
   - machine: ./cloud-machines/mongo-node.yml
     nodes: 3
 
