--- a/cloud-machines/elasticsearch-node.yml
+++ b/cloud-machines/elasticsearch-node.yml
@@ -7,8 +7,11 @@ instance:
   keyname: aws-keyname
   securitygroups: [sg-00000000]
   subnetid: subnet-abcd0000
-  cloudconfig: cloud-configs/elasticsearch-node.yaml
+  cloudconfig: cloud-configs/elasticsearch-node.yml
   ebsoptimized: true
+  tags:
+    - { key: my-instance-tag-1, value: value1 }
+    - { key: my-instance-tag-2, value: value2 }
 
 volumes:
   - name: es-data
@@ -18,3 +21,6 @@ volumes:
     device: /dev/xvdk
     mount: /es-data
     filesystem: btrfs
+    tags:
+      - { key: my-volume-tag-1, value: value1 }
+      - { key: my-volume-tag-2, value: value2 }
