--- a/cloud-machines/example-cluster.yml
+++ b/cloud-machines/example-cluster.yml
@@ -1,7 +1,7 @@
 default:
   imageid: ami-f5a5a5c5
   region: us-west-2
-  defaultavailablezone: us-west-2a
+  availablezone: us-west-2a
   keyname: aws-keyname
   securitygroups: [sg-00000000]
   subnetid: subnet-abcd0000
